--- a/private/forms/NRP-account.html
+++ b/private/forms/NRP-account.html
@@ -154,7 +154,7 @@
         var subject = "RPiOVN: New NRP Account Application: ";
         var message = "<!DOCTYPE html><html lang='en'><body>";
 
-        message = message+"<p><b>Name:</b> "+$('#inputName').val()+"</p><br>";
+        message = message+"<p><b>Name:</b> "+$('#inputFirstName').val()+' '+$('#inputLastName').val()+"</p><br>";
         message = message+"<p><b>Email:</b> "+$('#inputEmail').val()+"</p><br>";
         message = message+"<p><b>Desired User Name:</b> "+$('#inputLoginName').val()+"</p><br>";
 
